--- a/forum-center/src/main/webapp/pages/user/myartic.html
+++ b/forum-center/src/main/webapp/pages/user/myartic.html
@@ -246,7 +246,25 @@
 
             // 删除文章
             handleDelete(row){
-
+                this.$confirm("确认删除吗？","提示",{type:"warning"}).then(()=>{
+                    // 点击确认执行此处代码
+                    axios.get("/article/deleteById.do?id="+row.id).then((res)=>{
+                        if(res.data.flag){
+                            this.$message({
+                                message:res.data.message,
+                                type:"success"
+                            })
+                            // 删除完之后重新更新页面
+                            this.findPage();
+                        }else{
+                            this.$message("删除失败")
+                        }
+                    }).catch((r)=>{
+                        this.showMessage(r);
+                    })
+                }).catch(()=>{
+                    this.$message("已取消")
+                })
             },
 
             // 切换不同模块时的动作
